<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:alpha="0.9"
    tools:context=".MenuProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profilpic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/nim"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/isinim"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/nama"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/isiname"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/kelas"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/isikelas"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/referensi"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#5A5858"
                android:textSize="10dp"
                android:text="@string/ref1"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#5A5858"
                android:textSize="10dp"
                android:text="@string/ref2"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#5A5858"
                android:textSize="10dp"
                android:text="@string/ref3"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#5A5858"
                android:textSize="10dp"
                android:text="@string/ref4"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#5A5858"
                android:textSize="10dp"
                android:text="@string/ref5"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>