<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:alpha="0.85"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:text="🅼🆄🆂🅸🆀🆄🅴"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="#141413"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#FFFFFF"
                android:text="Login"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#ababab"
                android:background="@drawable/textinputborder"
                android:hint="@string/Username"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true">

            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
           android:layout_marginTop="80dp"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#ababab"
                android:background="@drawable/textinputborder"
                android:hint="@string/Password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textVisiblePassword"
                android:password="true"
                android:singleLine="true">

            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="160dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/Login"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textColor="#000000"
                android:background="@drawable/btnlogin"
                android:text="@string/Login"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>